--- a/tasks.html
+++ b/tasks.html
@@ -65,7 +65,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <h1>Step 2</h1>
     <div id="toolkit-display">
-        <p>Please take a note of this code: <b><span id="generated-code"></b></span>
+        <p>Make a note of this unique code: <b><span id="generated-code"></b></span>&nbsp;&nbsp;
         <button onclick="copyCode()">Copy code</button></p>
        <!-- <button onclick="resetCode()">Clear Data and Restart</button>-->
     </div>
@@ -111,6 +111,7 @@
             </tr>
         </tbody>
     </table>
+    <p>When you're done, <a href="https://app.prolific.com/submissions/complete?cc=C23I99Q0">return to Prolific</a></p>
 </body>
 </html>
  
