--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <h1>Step 1</h1>
-    <div id="get-toolkit">
+    <!--<div id="get-toolkit">
         <h2>Get a tasklist</h2>
         <form id="business-size-form">
             <label for="business-size">Business size</label>
@@ -54,7 +54,7 @@
             </select>
             <button type="button" onclick="generateCode()">Go</button>
         </form>
-    </div>
+    </div>-->
 
 <div id="retrieve-toolkit">
     <h2>Retrieve a tasklist</h2>
