--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <h1>Step 1</h1>
-    <!--<div id="get-toolkit">
+    <div id="get-toolkit">
         <h2>Get a tasklist</h2>
         <form id="business-size-form">
             <label for="business-size">Business size</label>
@@ -54,9 +54,9 @@
             </select>
             <button type="button" onclick="generateCode()">Go</button>
         </form>
-    </div>-->
+    </div>
 
-<div id="retrieve-toolkit">
+<!--<div id="retrieve-toolkit">
     <h2>Retrieve a tasklist</h2>
     <form id="retrieve-form" onsubmit="event.preventDefault(); retrieveToolkit();">
         <label for="code-input">Enter code</label>
@@ -64,6 +64,6 @@
         <button type="submit">Go</button>
     </form>
     <p id="error-message" style="color:red; display:none;">Code not found</p>
-</div>
+</div>-->
 </body>
 </html>
