--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App3 index</title>
+    <title>Get my tasklist</title>
     <!-- Redirect to tasks.html if custom_user_id is set -->
     <script>
         (function() {
@@ -40,9 +40,8 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K45J2CVG"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <h1>Step 1</h1>
+    <h1>Get my tasklist</h1>
     <div id="get-toolkit">
-        <h2>Get a tasklist</h2>
         <form id="business-size-form">
             <label for="business-size">Business size</label>
             <select id="business-size">
