--- a/tasks.html
+++ b/tasks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App3 tasks</title>
+    <title>My tasklist</title>
     <!-- Push login event to data layer -->
     <script>
         (function() {
@@ -63,7 +63,7 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K45J2CVG"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <h1>Step 2</h1>
+    <h1>My tasklist</h1>
     <div id="toolkit-display">
         <p>Make a note of this unique code: <b><span id="generated-code"></b></span>&nbsp;&nbsp;
         <button onclick="copyCode()">Copy code</button></p>
