--- a/tasks.html
+++ b/tasks.html
@@ -65,7 +65,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <h1>My tasklist</h1>
     <div id="toolkit-display">
-        <p>Make a note of this unique code: <b><span id="generated-code"></b></span>&nbsp;&nbsp;
+        <p>Your unique code: <b><span id="generated-code"></b></span>&nbsp;&nbsp;
         <button onclick="copyCode()">Copy code</button></p>
        <!-- <button onclick="resetCode()">Clear Data and Restart</button>-->
     </div>
@@ -112,7 +112,7 @@
         </tbody>
     </table>
     <p>&nbsp;</p>
-    <p>When you're done, <a href="https://app.prolific.com/submissions/complete?cc=C1ROP6UO">return to Prolific</a></p>
+    <p>When you're done, <a href="https://app.prolific.com/submissions/complete?cc=CN47XBZ4">return to Prolific</a></p>
 </body>
 </html>
  
